package com.itschool.jpa.enums;

public enum InstrumentCategory {
    STRINGS, WIND, PERCUSSION, KEYBOARD
}
